# goit-ds-hw-01

./: Dockerfile.txt  addressbook.pkl  hw_08.py  pyproject.toml  requirements.txt
