[tool.poetry]
name = "test-poetry"
version = "0.2.1"
description = "Contact book project"
authors = ["Mariya Petrushenko <marypetr123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
